# src/api/generated/src/apis/sandboxes.rs
@@ -213,6 +213,24 @@ pub enum SandboxesSandboxIdRefreshesPostResponse {
 #[derive(Debug, PartialEq, Serialize, Deserialize)]
 #[must_use]
 #[allow(clippy::large_enum_variant)]
+pub enum SandboxesSandboxIdRenamePostResponse {
+    /// Sandbox renamed successfully
+    Status204_SandboxRenamedSuccessfully,
+    /// Bad request
+    Status400_BadRequest(models::Error),
+    /// Authentication error
+    Status401_AuthenticationError(models::Error),
+    /// Not found
+    Status404_NotFound(models::Error),
+    /// Conflict
+    Status409_Conflict(models::Error),
+    /// Server error
+    Status500_ServerError(models::Error),
+}
+
+#[derive(Debug, PartialEq, Serialize, Deserialize)]
+#[must_use]
+#[allow(clippy::large_enum_variant)]
 pub enum SandboxesSandboxIdResumePostResponse {
     /// The sandbox was resumed successfully
     Status201_TheSandboxWasResumedSuccessfully(models::Sandbox),
@@ -438,6 +456,20 @@ pub trait Sandboxes<E: std::fmt::Debug + Send + Sync + 'static = ()>:
         path_params: &models::SandboxesSandboxIdRefreshesPostPathParams,
         body: &Option<models::SandboxRefreshRequest>,
     ) -> Result<SandboxesSandboxIdRefreshesPostResponse, E>;
+
+    /// Rename sandbox.
+    ///
+    /// SandboxesSandboxIdRenamePost - POST /sandboxes/{sandboxID}/rename
+    async fn sandboxes_sandbox_id_rename_post(
+        &self,
+
+        method: &Method,
+        host: &Host,
+        cookies: &CookieJar,
+        claims: &Self::Claims,
+        path_params: &models::SandboxesSandboxIdRenamePostPathParams,
+        body: &models::SandboxRenameRequest,
+    ) -> Result<SandboxesSandboxIdRenamePostResponse, E>;
 
     /// Resume sandbox.
     ///
